# pycta2045

./: .gitignore  :w  DER_agent.py  LICENSE  MANIFEST.in  Nicoles_practice.txt  README.md  SGD.py  SGD2.py  TODOs.md  ToDo.md  __init__.py  batt.py  com.py  cta2045agent.py  cta2045dcm.py  dcm.py  dcm_tui.py  dcm_tui_tab.py  del.py  der.py  der_tui.py  log.csv  log.sh  mock_serv.py  requirements.txt  requirements10.txt  requirements_tui.txt  setup.cfg  setup.py  sgdlog.csv
agents/: __init__.py  cta2045device.py  gen_agent.py
agents/charger/: charger.py
agents/com/: __init__.py  handler.py
agents/cta2045/: CTA2045_commands.json  CTA2045_commands_simple.json  __init__.py  handler.py
agents/models/: __init__.py  ev_model.py  model.py
agents/scpi/: __init__.py  commands.json  handler.py  simple_client.py
doc/: README.md  com.md  cta2045.md  device.md  models.md  scipi.md  scpi.md
examples/: README.md  SGD.py  SGD2.py  battery.py  dcm.py  dcm_tui.py  dcm_tui_tab.py  der.py  ev_example.py  mock_client.py  mock_server.py  requirements_tui.txt  setup.py  simple_device.py  simple_ucm.py
journal/: glossaries.tex  journal.md  main.tex  notebook.sty
journal/Summer2021/: CTA2045.md  init.md
journal/Winter2021/: Desktop-Sim.tex  UCM-lib.tex  all-sprints.tex  blank_entry.tex
logs/: DCM_Tui.csv  DCM_log.csv  DER_log.csv  base_case_loadup.csv  base_case_loadup2.csv  debug.csv  endshed.csv  ev_record_commodity.csv  ev_records.csv  ev_records_soc.csv  loadup.csv  scpi_log.csv  sgdlog.csv  sgdlog_setup.csv  shed.csv  ucmlog.csv  ucmlog_setup.csv
pycta2045/: __init__.py  cta2045device.py  cta2045tui.py
pycta2045/com/: __init__.py  handler.py
pycta2045/cta2045/: CTA2045_commands.json  __init__.py  handler.py
pycta2045/models/: __init__.py  ev_model.py  model.py
pycta2045/scpi/: handler.py
scpi/: commands.json  handler.py
tests/: all.py  test_charger.py  test_com.py  test_cta.py  test_dcm.py  test_ev.py  test_scpi.py
tests/com/: test_com.py
tests/cta2045/: test_cta.py
tests/models/: test_ev.py
tests/scpi/: test_scpi.py
tmp/: batt.py  battery.py  tm.py
