[metadata]
name = pycta2045
version = 0.0.4
author = mohamm-alsaid
author_email = mohamm-alsaid@gmail.com
description = A library for CTA2045 standard
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mohamm-alsaid/pycta2045
project_urls =
    Bug Tracker = https://github.com/mohamm-alsaid/pycta2045/issues
    Documentation = https://github.com/mohamm-alsaid/pycta2045/tree/main/doc
    Examples = https://github.com/mohamm-alsaid/pycta2045/tree/main/examples
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pycta2045
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pycta2045